# agentscape

./: README.md  pyproject.toml
.github/workflows/: publish.yml
agentscape/: __init__.py  __main__.py  cli.py  models.py  project.py
agentscape/agents/: agent.py  weather_agent.py
agentscape/agents/tools/: get_weather.py
tests/: test_project.py
