[project]
name = "agentkit"
version = "0.1.0"
description = "A modern CLI tool for installing components from a repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.4",
    "pydantic-ai>=0.0.39",
    "typer>=0.15.2",
    "rich>=13.9.4",
    "questionary>=2.1.0",
]

[project.scripts]
agentkit = "agentkit.cli:app"

[tool.uv]
package = true
